Product landing page updated

--- a/productlanding/product.html
+++ b/productlanding/product.html
@@ -1,22 +1,49 @@
 <html>
-    <head><meta charset="utf-8"></head>
-    <body>
-      <h1 id="header">
-      <img id="header-img" src="">     
-      <nav id="nav-bar">
-          <a class="nav-link" href="#"></a>
-          <a class="nav-link" href="#"></a>
-          <a class="nav-link" href="#"></a>
-      </nav>
-      </h1>  
+   <header id="header">
+     <meta charset="utf-8">
+     <h1>Indian Handicraft Items</h1>   
+     <nav id="nav-bar">
+       <a class="nav-link" href="#video">Video</a>
+       <a class="nav-link" href="#description">Description</a>
+       <a class="nav-link" href="#pricing">Pricing</a>
+     </nav>  
+  </header>
+  <body>
+      <img id="header-img" src="https://4.imimg.com/data4/OO/NT/ANDROID-39781721/product-500x500.jpeg" alt="HandCraft Pieces">  
+    <div class="info">
+      <div class="spec">
+        <h2>Product Specifications</h2>
+        <table>
+          <tbody>
+            <tr>
+              <th>Material</th>	
+              <td>Stone and Wood</td>
+            </tr>
+            <tr>
+              <th>Type</th>
+              <td>Indoor</td>
+            </tr>
+          </tbody>       
+        </table>
+      </div>  
+      <div class="desc">
+        <h2 id="description">Description</h2>
+        <p>Designed and built with the heritage and rich touch of Indian culture. This handicraft items are antique, and will prove to be a royal showpiece in your house.</p>
+      </div>  
+      <div class="price">
+        <h2 id="pricing">Pricing and Quantity</h2>
+        <p>The prices start with 300Rs. and the maximum quantity for eact item is 100.</p>
+      </div>
+    </div>
       <video id="video" width="320" height="240" controls>
-        <source src="" type="video/mp4">
+        <source src="https://www.youtube.com/watch?v=UVfliP6A8cU" type="video/mp4">
           Your browser does not support the video tag.
       </video>
-      <form id="form" action="https://www.freecodecamp.com/email-submit" method="post">
+      <form id="form" action="https://www.freecodecamp.com/email-submit" method="post">More Catalogue:
         <input id="email" type="email" placeholder="email" >
-        <button id="submit" type="submit">Submit</button>
+        <button id="submit" type="submit">Submit for more Info</button>
       </form>
 
     </body>
+    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 </html>
