--- a/technicalDoc/tech.html
+++ b/technicalDoc/tech.html
@@ -1,32 +1,29 @@
 <html>
+    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
   <nav id="navbar">
-    <header>React Hooks Notes</header>
+    <header class="top">React Hooks Notes</header>
     <ul>
       <li><a class="nav-link" href="#Introduction">Introduction</a></li>
       <li>
-        <a class="nav-link" href="#Hooks at a Glance">Hooks at a Glance</a>
+        <a class="nav-link" href="#Hooks_at_a_Glance">Hooks at a Glance</a>
       </li>
       <li>
-        <a class="nav-link" href="#Using the State Hook"
+        <a class="nav-link" href="#Using_the_State_Hook"
           >Using the State Hook</a
         >
       </li>
       <li>
-        <a class="nav-link" href="#Using the Effect Hook"
+        <a class="nav-link" href="#Using_the_Effect_Hook"
           >Using the Effect Hook</a
         >
       </li>
-      <li><a class="nav-link" href="#Rules of Hooks">Rules of Hooks</a></li>
-      <li>
-        <a class="nav-link" href="#Building Your Own Hooks"
-          >Building Your Own Hooks</a
-        >
-      </li>
+      <li><a class="nav-link" href="#Rules_of_Hooks">Rules of Hooks</a></li>
+      <li><a class="nav-link" href="#Reference">Reference</a></li>
     </ul>
   </nav>
   <main id="main-doc">
     <section class="main-section" id="Introduction">
-      <header><h1>Introduction</h1></header>
+      <header>Introduction</header>
       <article>
         <p>
           Hooks are a new addition in React 16.8. They let you use state and
@@ -73,7 +70,7 @@
         </p>
       </article>
     </section>
-    <section class="main-section" id="Hooks at a Glance">
+    <section class="main-section" id="Hooks_at_a_Glance">
       <header>Hooks at a Glance</header>
       <article>
         <p>
@@ -89,6 +86,7 @@
           behavior between different components. We’ll look at the built-in
           Hooks first.
         </p>
+        <ul><li>
         <h2>📌 State Hook</h2>
         This example renders a counter. When you click the button, it increments
         the value:
@@ -141,7 +139,8 @@ function ExampleWithManyStates() {
           useState many times, you do it in the same order during every render.
           We’ll come back to why this works and when this is useful later.
         </p>
-
+      </li>
+      <li>
         <h3>But what is a Hook?</h3>
         <p>
           Hooks are functions that let you “hook into” React state and lifecycle
@@ -255,6 +254,8 @@ function FriendStatusWithCounter(props) {
           pieces are related (such as adding and removing a subscription),
           rather than forcing a split based on lifecycle methods.
         </p>
+      </li>
+      <li>
         <h3>✌️ Rules of Hooks</h3>
         <p>
           Hooks are JavaScript functions, but they impose two additional rules:
@@ -267,6 +268,8 @@ function FriendStatusWithCounter(props) {
           seem limiting or confusing at first, but they are essential to making
           Hooks work well.
         </p>
+      </li>
+      <li>
         <h3>💡 Building Your Own Hooks</h3>
         <p>
           Sometimes, we want to reuse some stateful logic between components.
@@ -303,8 +306,6 @@ function useFriendStatus(friendID) {
           It takes friendID as an argument, and returns whether our friend is
           online. Now we can use it from both components:
         </p>
-
-        <p></p>
         <pre><code>
 function FriendStatus(props) {
   const isOnline = useFriendStatus(props.friend.id);
@@ -337,6 +338,8 @@ function FriendListItem(props) {
           timers, and probably many more we haven’t considered. We are excited
           to see what custom Hooks the React community will come up with.
         </p>
+      </li>
+      <li>
         <h2>🔌 Other Hooks</h2>
         <p>
           There are a few less commonly used built-in Hooks that you might find
@@ -359,9 +362,10 @@ function Todos() {
   const [todos, dispatch] = useReducer(todosReducer);
   // ...
 </code></pre>
+</li></ul>
       </article>
     </section>
-    <section class="main-section" id="Using the State Hook">
+    <section class="main-section" id="Using_the_State_Hook">
       <header>Using the State Hook</header>
       <article>
         <h3>What is a Hook?</h3>
@@ -465,7 +469,7 @@ function Todos() {
         </code></pre>
       </article>
     </section>
-    <section class="main-section" id="Using the Effect Hook">
+    <section class="main-section" id="Using_the_Effect_Hook">
       <header>Using the Effect Hook</header>
       <article>
       <p>The Effect Hook lets you perform side effects in function components:</p>
@@ -663,11 +667,129 @@ Why did we return a function from our effect? This is the optional cleanup mecha
 When exactly does React clean up an effect? React performs the cleanup when the component unmounts. However, as we learned earlier, effects run for every render and not just once. This is why React also cleans up effects from the previous render before running the effects next time. We’ll discuss why this helps avoid bugs and how to opt out of this behavior in case it creates performance issues later below.
 </p></article>
     </section>
-    <section class="main-section">
-      <header></header>
-      <p></p>
-      <code></code>
-      <p></p>
+    <section class="main-section" id="Rules_of_Hooks">
+      <header>Rules of Hooks</header>
+      <article>
+        <p>Hooks are JavaScript functions, but you need to follow two rules when using them. We provide a linter plugin to enforce these rules automatically:
+    
+<b>Only Call Hooks at the Top Level</b>
+Don’t call Hooks inside loops, conditions, or nested functions. Instead, always use Hooks at the top level of your React function. By following this rule, you ensure that Hooks are called in the same order each time a component renders. That’s what allows React to correctly preserve the state of Hooks between multiple useState and useEffect calls. (If you’re curious, we’ll explain this in depth below.)
+
+<b>Only Call Hooks from React Functions</b>
+Don’t call Hooks from regular JavaScript functions. Instead, you can:
+
+✅ Call Hooks from React function components.
+✅ Call Hooks from custom Hooks (we’ll learn about them on the next page).
+By following this rule, you ensure that all stateful logic in a component is clearly visible from its source code.
+</p>
+<h3>ESLint Plugin</h3>
+<p>We released an ESLint plugin called eslint-plugin-react-hooks that enforces these two rules. You can add this plugin to your project if you’d like to try it:
+</p>
+<pre><code>
+npm install eslint-plugin-react-hooks --save-dev
+// Your ESLint configuration
+{
+  "plugins": [
+    // ...
+    "react-hooks"
+  ],
+  "rules": {
+    // ...
+    "react-hooks/rules-of-hooks": "error", // Checks rules of Hooks
+    "react-hooks/exhaustive-deps": "warn" // Checks effect dependencies
+  }
+}
+</code></pre>
+<p>
+In the future, we intend to include this plugin by default into Create React App and similar toolkits.
+
+You can skip to the next page explaining how to write your own Hooks now. On this page, we’ll continue by explaining the reasoning behind these rules.
+
+Explanation
+As we learned earlier, we can use multiple State or Effect Hooks in a single component:
+</p>
+<pre><code>
+function Form() {
+  // 1. Use the name state variable
+  const [name, setName] = useState('Mary');
+
+  // 2. Use an effect for persisting the form
+  useEffect(function persistForm() {
+    localStorage.setItem('formData', name);
+  });
+
+  // 3. Use the surname state variable
+  const [surname, setSurname] = useState('Poppins');
+
+  // 4. Use an effect for updating the title
+  useEffect(function updateTitle() {
+    document.title = name + ' ' + surname;
+  });
+
+  // ...
+}
+</code></pre>
+<p>
+So how does React know which state corresponds to which useState call? The answer is that React relies on the order in which Hooks are called. Our example works because the order of the Hook calls is the same on every render:
+</p>
+<pre><code>
+// ------------
+// First render
+// ------------
+useState('Mary')           // 1. Initialize the name state variable with 'Mary'
+useEffect(persistForm)     // 2. Add an effect for persisting the form
+useState('Poppins')        // 3. Initialize the surname state variable with 'Poppins'
+useEffect(updateTitle)     // 4. Add an effect for updating the title
+
+// -------------
+// Second render
+// -------------
+useState('Mary')           // 1. Read the name state variable (argument is ignored)
+useEffect(persistForm)     // 2. Replace the effect for persisting the form
+useState('Poppins')        // 3. Read the surname state variable (argument is ignored)
+useEffect(updateTitle)     // 4. Replace the effect for updating the title
+
+// ...\</code></pre>
+<p>As long as the order of the Hook calls is the same between renders, React can associate some local state with each of them. But what happens if we put a Hook call (for example, the persistForm effect) inside a condition?
+</p>
+<pre><code>
+  // 🔴 We're breaking the first rule by using a Hook in a condition
+  if (name !== '') {
+    useEffect(function persistForm() {
+      localStorage.setItem('formData', name);
+    });
+  }
+</code></pre>
+<p>
+The name !== '' condition is true on the first render, so we run this Hook. However, on the next render the user might clear the form, making the condition false. Now that we skip this Hook during rendering, the order of the Hook calls becomes different:</p>
+<pre><code>
+useState('Mary')           // 1. Read the name state variable (argument is ignored)
+// useEffect(persistForm)  // 🔴 This Hook was skipped!
+useState('Poppins')        // 🔴 2 (but was 3). Fail to read the surname state variable
+useEffect(updateTitle)     // 🔴 3 (but was 4). Fail to replace the effect
+</code></pre>
+<p>
+React wouldn’t know what to return for the second useState Hook call. React expected that the second Hook call in this component corresponds to the persistForm effect, just like during the previous render, but it doesn’t anymore. From that point, every next Hook call after the one we skipped would also shift by one, leading to bugs.
+
+This is why Hooks must be called on the top level of our components. If we want to run an effect conditionally, we can put that condition inside our Hook:
+</p>
+<code><pre>
+  useEffect(function persistForm() {
+    // 👍 We're not breaking the first rule anymore
+    if (name !== '') {
+      localStorage.setItem('formData', name);
+    }
+  });
+</code></pre>
+      </article>
     </section>
+    <section class="main-section" id="Reference">
+      <header>Reference</header>
+      <article>
+<ul><li>All the documentation taken from <a href="https://reactjs.org/docs/" target="_blank">Reactjs.org</a></li></ul>
+
+      </article>
+    </section>
+<footer><a href="#top">Back to Top</a></footer>
   </main>
 </html>
