Product page modified

--- a/productlanding/product.html
+++ b/productlanding/product.html
@@ -1,54 +1,80 @@
 <html>
-   <header id="header">
-     <meta charset="utf-8">
-     <div class="logo">
-        <img id="header-img" 
-             src="https://5.imimg.com/data5/KL/FD/MY-2464511/cow-krishna-showpiece-gold-plated-01-250x250.jpeg" 
-             alt="HandCraft Logo"
-         > 
-     </div>
-     <h1>Indian Handicraft Items</h1>
-     <nav id="nav-bar">
-       <a class="nav-link" href="#info">Info_Video</a>
-       <a class="nav-link" href="#description">Description</a>
-       <a class="nav-link" href="#pricing">Pricing</a>
-     </nav>  
+  <header id="header">
+    <meta charset="utf-8" />
+    <div class="logo">
+      <img
+        id="header-img"
+        src="https://5.imimg.com/data5/KL/FD/MY-2464511/cow-krishna-showpiece-gold-plated-01-250x250.jpeg"
+        alt="HandCraft Logo"
+      />
+    </div>
+    <h1>Indian Handicraft Items</h1>
+    <nav id="nav-bar">
+      <a class="nav-link" href="#info">Info_Video</a>
+      <a class="nav-link" href="#description">Description</a>
+      <a class="nav-link" href="#pricing">Pricing</a>
+    </nav>
   </header>
   <body>
-      <img id="company-img" src="https://4.imimg.com/data4/OO/NT/ANDROID-39781721/product-500x500.jpeg" alt="HandCraft Pieces">  
     <div class="info">
-      <div class="spec">
-        <h2>Product Specifications</h2>
-        <table>
-          <tbody>
-            <tr>
-              <th>Material</th>	
-              <td>Stone and Wood</td>
-            </tr>
-            <tr>
-              <th>Type</th>
-              <td>Indoor</td>
-            </tr>
-          </tbody>       
-        </table>
-      </div>  
+      <div class="info1">
+        <img
+          id="company-img"
+          src="https://4.imimg.com/data4/OO/NT/ANDROID-39781721/product-500x500.jpeg"
+          alt="HandCraft Pieces"
+        />
+        <div class="spec">
+          <h2>Product Specifications</h2>
+          <table>
+            <tbody>
+              <tr>
+                <th>Material</th>
+                <td>Stone and Wood</td>
+              </tr>
+              <tr>
+                <th>Type</th>
+                <td>Indoor</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+      </div>
       <div class="desc">
         <h2 id="description">Description</h2>
-        <p>Designed and built with the heritage and rich touch of Indian culture. This handicraft items are antique, and will prove to be a royal showpiece in your house.</p>
-      </div>  
+        <p>
+          Designed and built with the heritage and rich touch of Indian culture.
+          This handicraft items are antique, and will prove to be a royal
+          showpiece in your house.
+        </p>
+      </div>
       <div class="price">
         <h2 id="pricing">Pricing and Quantity</h2>
-        <p>The prices start with 300Rs. and the maximum quantity for eact item is 100.</p>
+        <p>
+          The prices start with 300 Rs. and the maximum allowed order quantity
+          for each item is 100.
+        </p>
       </div>
     </div>
-      <section id="info">
-        <iframe id="video" width="765" height="421" src="https://www.youtube.com/embed/UVfliP6A8cU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        </section>
-      <form id="form" action="https://www.freecodecamp.com/email-submit" method="post">More Catalogue:
-        <input name="email" id="email" type="email" placeholder="email" >
-        <input id="submit" type="submit">
-      </form>
-
-    </body>
-    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+    <section id="info">
+      <iframe
+        id="video"
+        width="765"
+        height="421"
+        src="https://www.youtube.com/embed/UVfliP6A8cU"
+        frameborder="0"
+        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+        allowfullscreen
+      ></iframe>
+    </section>
+    <form
+      id="form"
+      action="https://www.freecodecamp.com/email-submit"
+      method="post"
+    >
+      More Catalogue:
+      <input name="email" id="email" type="email" placeholder="email" />
+      <input id="submit" type="submit" />
+    </form>
+  </body>
+  <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 </html>
