--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <html>
+  <!-- START NAV -->
   <header>
     <nav id="navbar">
       <a class="nav-link" href="#welcome-section">About</a>
@@ -6,20 +7,84 @@
       <a class="nav-link" href="#contact">Contact</a>
     </nav>
   </header>
-  <section id="welcome-section">
-    <h1>Hey! I am Jayesh. A Web Developer.</h1>
-  </section>
-  <section id="projects">
-    <h2>Following are some of my projects.</h2>
-    <div class="project-tile">
-      <a href="https://codepen.io/jj2007/pen/eoKmjW">Tribute</a>
-      <a href="https://codepen.io/jj2007/pen/dLqPoO">Survey</a>
-      <a href="https://codepen.io/jj2007/pen/mYdRZe">Product</a>
-      <a href="https://codepen.io/jj2007/pen/qzOKRm">Documentation</a>
-      <a href="https://codepen.io/jj2007/pen/orbNYP">RandomQuotes</a>
-    </div>
-  </section>
-  <section id="contact">
-    <a id="profile=link" href="https://github.wdf.sap.corp/jj2007">git</a>
-  </section>
+  <!-- END NAV -->
+  <main id="doc">
+    <!-- START WELCOME SECTION -->
+    <section id="welcome-section">
+      <h1>Hey! I am Jayesh. A Web Developer.</h1>
+    </section>
+    <!-- END WELCOME SECTION -->
+    <!-- START PROJECTS SECTION -->
+    <section id="projects">
+      <h2>Following are some of my projects.</h2>
+      <div class="project-tile">
+        <a
+          href="https://codepen.io/jj2007/pen/eoKmjW"
+          target="_blank"
+          class="btn btn-dark"
+          ><i class="fas fa-lightbulb"></i>Tribute</a
+        >
+        <a
+          href="https://codepen.io/jj2007/pen/dLqPoO"
+          target="_blank"
+          class="btn btn-dark"
+          ><i class="fas fa-poll-h"></i>Survey</a
+        >
+        <a
+          href="https://codepen.io/jj2007/pen/mYdRZe"
+          target="_blank"
+          class="btn btn-dark"
+          ><i class="fas fa-gopuram"></i>Product</a
+        >
+        <a
+          href="https://codepen.io/jj2007/pen/qzOKRm"
+          target="_blank"
+          class="btn btn-dark"
+          ><i class="fas fa-book"></i>Documentation</a
+        >
+        <a
+          href="https://codepen.io/jj2007/full/orbNYP"
+          target="_blank"
+          class="btn btn-dark"
+          ><i class="fas fa-quote-left"></i>RandomQuotes</a
+        >
+        <a
+          href="https://codepen.io/jj2007/full/orbNYP"
+          target="_blank"
+          class="btn btn-dark"
+          ><i class="fab fa-markdown"></i>MarkDown Previewer</a
+        >
+        <a
+          href="https://codepen.io/jj2007/full/orbNYP"
+          target="_blank"
+          class="btn btn-dark"
+          ><i class="fas fa-drum"></i>Drum Machine</a
+        >
+        <a
+          href="https://codepen.io/jj2007/full/orbNYP"
+          target="_blank"
+          class="btn btn-dark"
+          ><i class="fas fa-calculator"></i>Calculator</a
+        >
+        <a
+          href="https://codepen.io/jj2007/full/orbNYP"
+          target="_blank"
+          class="btn btn-dark"
+          ><i class="fas fa-stopwatch"></i>Pomodoro</a
+        >
+      </div>
+    </section>
+    <section id="contact">
+      Contact Me!
+      <a
+        id="profile=link"
+        href="https://github.wdf.sap.corp/jj2007"
+        class="btn btn-dark"
+        ><i class="fab fa-github" role="button"></i>git</a
+      >
+      <a href="https://www.linkedin.com/in/jjayeshjadhav/" class="btn btn-dark"
+        ><i class="fab fa-linkedin"></i>linkedIn</a
+      >
+    </section>
+  </main>
 </html>
