bootstrap cdn added

--- a/index.html
+++ b/index.html
@@ -2,6 +2,12 @@
   <!-- START NAV -->
   <head>
     <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+      crossorigin="anonymous"
+    />
+    <link
       href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css"
       rel="stylesheet"
     />
@@ -95,7 +101,7 @@
       <a
         id="profile-link"
         target="_blank"
-        href="https://github.wdf.sap.corp/jj2007"
+        href="https://github.com/jj2007"
         class="btn btn-info"
         ><i class="fab fa-github" role="button"></i>git</a
       >
