--- a/index.html
+++ b/index.html
@@ -41,28 +41,28 @@
       <h3>Following are some of my projects.</h3>
       <div class="project-tile">
         <a
-          href="https://codepen.io/jj2007/pen/eoKmjW"
+          href="https://codepen.io/jj2007/full/eoKmjW"
           target="_blank"
           class="btn btn-dark"
           ><i class="fas fa-lightbulb"></i>Tribute</a
         >
         <a
-          href="https://codepen.io/jj2007/pen/dLqPoO"
+          href="https://codepen.io/jj2007/full/dLqPoO"
           target="_blank"
           class="btn btn-dark"
           ><i class="fas fa-poll-h"></i>Survey</a
         >
         <a
-          href="https://codepen.io/jj2007/pen/mYdRZe"
+          href="https://codepen.io/jj2007/full/mYdRZe"
           target="_blank"
           class="btn btn-dark"
           ><i class="fas fa-gopuram"></i>Product</a
         >
         <a
-          href="https://codepen.io/jj2007/pen/qzOKRm"
+          href="https://codepen.io/jj2007/full/qzOKRm"
           target="_blank"
           class="btn btn-dark"
-          ><i class="fas fa-book"></i>Documentation</a
+          ><i class="fas fa-book"></i>Hooks Documentation</a
         >
         <a
           href="https://codepen.io/jj2007/full/orbNYP"
